--- a/users/static/css/style.css
+++ b/users/static/css/style.css
@@ -1,3 +1,11 @@
+body{
+    /* font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif; */
+    font-family: Arial, Helvetica, sans-serif;
+}
+div.wrapper{
+    width: 1000px;
+    display: block;
+}
 div.flex-row{
     display: flex;
     justify-content: center;
