Fixes Integer conversion for add_credit view. Correct variable name in user template.

--- a/users/templates/user.html
+++ b/users/templates/user.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
         <div class="flex-row">
             <div class="flex-box header">
-                <h3>Welcome, {{ first_name }}!</h3>
+                <h3>Welcome, {{ user_first_name }}!</h3>
                 <ul class="navbar">
                     <li><a href="./logout/">Log Out</a></li>
                 </ul>
